playing around with .name-card width to fix scaling on mobile view

--- a/styles.css
+++ b/styles.css
@@ -279,5 +279,5 @@ body {
 
 .name-card {
     height: 400px !important;
-    width: 95%;
+    width: 90%;
 }
